--- a/src/custom-styles.css
+++ b/src/custom-styles.css
@@ -13,14 +13,13 @@
     margin-right: 1em;
     padding-top: 1em;
     background-color: aliceblue;
-
 }
 
 .info {
     font-family: Verdana;
 }
 
-.resultrowtext {
+.resultrow-text {
     position: relative;
 }
 
