Added open dialog feature

--- a/src/custom-styles.css
+++ b/src/custom-styles.css
@@ -11,7 +11,7 @@
     marging-bottom: 1em;
     margin-left: 1em;
     margin-right: 1em;
-    padding-top: 1em;
+    padding: 1em;
     background-color: aliceblue;
 }
 
